--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+gunicorn = "*"
+lyricsgenius = "*"
+configparser = "*"
 Flask = "*"
 PyJWT = "*"
 Flask-SQLAlchemy = "*"
@@ -12,3 +15,4 @@ Flask-RESTful = "*"
 [dev-packages]
 
 [requires]
+python_version = "3.8"
